# local-package-demo

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
docs/: index.md
examples/: basic_example.py
src/: __init__.py
src/core/: __init__.py  algorithms.py
src/local_package_demo/: config.py
src/local_package_demo/core/: processing.py
src/local_package_demo/models/: __init__.py
src/local_package_demo/utils/: io_utils.py
src/models/: data_model.py
src/utils/: __init__.py  math_utils.py
tests/: test_algorithms.py  test_utils.py
