[project]
name = "local_package_demo"
version = "0.1.0"
description = "Example scientific python library"
authors = [{name="Eduardo Vilches"}]
requires-python = ">=3.11"

dependencies = [
    "numpy"
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]