
[project]
name = "local-package-demo"
version = "0.1.0"
description = "Example scientific python library"
authors = [{name="Eduardo Vilches"}]
requires-python = ">=3.9"
dependencies = [
    "numpy"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]